project_2_raw/loop-dependencies/loop_dependencies-52195849.err

Inactive Modules:
  1) code-server/4.16.1     2) git/2.31.1     3) openblas/0.2.20     4) python/3.8.5

The following have been reloaded with a version change:
  1) gcc/8.2.0 => gcc/11.4.0


Currently Loaded Modules:
  1) StdEnv   2) eth_proxy   3) gcc/11.4.0

Inactive Modules:
  1) openblas/0.2.20   2) python/3.8.5   3) code-server/4.16.1   4) git/2.31.1

 

recur_omp.c: In function 'main':
recur_omp.c:24:20: warning: implicit declaration of function 'omp_get_num_threads' [-Wimplicit-function-declaration]
   24 |     int nthreads = omp_get_num_threads();
      |                    ^~~~~~~~~~~~~~~~~~~
recur_omp.c:25:15: warning: implicit declaration of function 'omp_get_thread_num' [-Wimplicit-function-declaration]
   25 |     int tid = omp_get_thread_num();
      |               ^~~~~~~~~~~~~~~~~~
recur_omp.c:36:13: error: '#pragma omp section' may only be used in '#pragma omp sections' construct
   36 |     #pragma omp section
      |             ^~~
make: *** [Makefile:12: build/recur_omp] Error 1
/var/spool/slurm/slurmd/state/job52195849/slurm_script: line 21: build/recur_omp: No such file or directory
